    by gcov. (Senthil)
  . Fixed memory leak with LOBs. (Senthil)

- Phpdbg:
  . Fixed stderr being written to stdout. (Bob)

- SOAP:
  . Fixed bug #70900 (SoapClient systematic out of memory error). (Dmitry)
  . Fixed bug #70940 (Segfault in soap / type_to_string). (Remi)

- SPL:
  . Fixed bug #70959 (ArrayObject unserialize does not restore protected
    fields). (Laruence)

- Standard:
  . Fixed count on symbol tables. (Laruence)
  . Fixed bug #70910 (extract() breaks variable references). (Laruence)

- Streams/Socket
  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)

12 Nov 2015, PHP 7.0.0 RC 7

- Core:
  . Fixed bug #70249 (Segmentation fault while running PHPUnit tests on
    phpBB 3.2-dev). (Laruence)
  . Fixed bug #70873 (Regression on private static properties access).
    (Laruence)
  . Fixed bug #70805 (Segmentation faults whilst running Drupal 8 test suite).
    (Dmitry, Laruence)
  . Fixed bug #70862 (Several functions do not check return code of
    php_stream_copy_to_mem()). (Anatol)
  . Fixed bug #70863 (Incorect logic to increment_function for proxy objects).
    (Anatol)
  . Fixed bug #70842 (Persistent Stream Segmentation Fault). (Caleb Champlin)
  . Fixed bug #70323 (Regression in zend_fetch_debug_backtrace() can cause
    segfaults). (Aharvey, Laruence)

- Mysqlnd:
  . Fixed bug #68344 (MySQLi does not provide way to disable peer certificate
    validation) by introducing MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT
	connection flag. (Andrey)

- OCI8:
  . Fixed bug #68298 (OCI int overflow). (Senthil)

- Opcache:
  . Fixed bug #70843 (Segmentation fault on MacOSX with
    opcache.file_cache_only=1). (Laruence)
  . Fixed bug #70656 (require() statement broken after opcache_reset() or a
    few hours of use). (Laruence)

- PDO:
  . Fix bug #70861 (Segmentation fault in pdo_parse_params() during Drupal 8
    test suite). (Anatol)

- Session:
  . Fixed bug #70876 (Segmentation fault when regenerating session id with